--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -4,9 +4,7 @@
 	xmlns="sap.m"
 	xmlns:mvc="sap.ui.core.mvc">
 	
-		<Page title="User"
-        showNavButton="true"
-		navButtonPress=".onNavBack">
+		<Page title="User">
 
  	<FlexBox alignItems="Center" justifyContent="Center">
 	  	<Panel>
