--- a/webapp/view/ManagerPEG.view.xml
+++ b/webapp/view/ManagerPEG.view.xml
@@ -33,70 +33,71 @@
 			</items>
 			<content>
 				<Table id="pegTable"
-			inset="false"
-			items = "{employee>/}" >
-			<!-- <headerToolbar>
-				<Toolbar>
-					<ToolbarSpacer/>
-					<Title text="Only Pending:"/>
-					<Switch 
-						id="PendingSwitch" 
-						state="false" 
-						customTextOn="  " 
-						customTextOff=" " 
-						change=".onPendingFilter">
-                        <layoutData>
-                            <FlexItemData growFactor="1" />
-                        </layoutData>
-                    </Switch>
-					<SearchField
-						id="sfInput"
-						width="30%" 
-						search=".onFilterEmployee" 
-						placeholder="Filter by Name"/>
-				</Toolbar>
-			</headerToolbar> -->
-				<columns>
+					inset="false"
+					items="{
+					path : '/PegReqSet'
+					 }" >
+					<!-- <headerToolbar>
+						<Toolbar>
+							<ToolbarSpacer/>
+							<Title text="Only Pending:"/>
+							<Switch 
+								id="PendingSwitch" 
+								state="false" 
+								customTextOn="  " 
+								customTextOff=" " 
+								change=".onPendingFilter">
+								<layoutData>
+									<FlexItemData growFactor="1" />
+								</layoutData>
+							</Switch>
+							<SearchField
+								id="sfInput"
+								width="30%" 
+								search=".onFilterEmployee" 
+								placeholder="Filter by Name"/>
+						</Toolbar>
+					</headerToolbar> -->
+						<columns>
 
-						<Column width="12em">
-							<Text text="Employees " />
-						</Column>
+								<Column width="12em">
+									<Text text="Employees " />
+								</Column>
 
-						<Column width="12em">
-							<Text text="Project" />
-						</Column>
+								<Column width="12em">
+									<Text text="Project" />
+								</Column>
 
-						<Column
-							width="12em">
-							<Text text="Status" />
-						</Column>
-				</columns>
+								<Column
+									width="12em">
+									<Text text="Status" />
+								</Column>
+						</columns>
 
-				 <items>
-            <ColumnListItem
-			type = "Navigation"
-			press = ".onPress"
+						<items>
+					<ColumnListItem
+					type = "Navigation"
+					press = ".onPress"
 
-			>
-                <cells>
-                    <ObjectIdentifier
-                        
-                        text="{employee>Employee}"
-						/>
-                    <Text
-                        text="{employee>Project}" />
-
-					<Text
-							text="{
-							path: 'employee>Status',
-							formatter: '.formatter.pegStatus'
-							}"
-							
-						/>
-    
-                </cells>
-            </ColumnListItem>
-        </items>
+					>
+						<cells>
+							<ObjectIdentifier
+								
+								text="{FromUser}"
+								/>
+							<Text
+								text="{ProjectId}" />
+							<Text
+									text="{
+									path: 'Status',
+									formatter: '.formatter.pegStatus'
+									}"
+									
+								/>
+			
+						</cells>
+					</ColumnListItem>
+				</items>
 			</Table>
 		</content>
 	</IconTabBar>
