--- a/webapp/view/ManagerPEG.view.xml
+++ b/webapp/view/ManagerPEG.view.xml
@@ -77,7 +77,7 @@
 						<items>
 					<ColumnListItem
 					type = "Navigation"
-					press = ".onPress"
+					press = ".onPegPress"
 
 					>
 						<cells>
