--- a/webapp/view/ManagerFeedback.view.xml
+++ b/webapp/view/ManagerFeedback.view.xml
@@ -102,7 +102,7 @@
 
 			<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" 
 			header="Name of the Evaluator"
-			subheader="{ToUser}" 
+			subheader="{FromUser}" 
 			frameType="OneByOne">
 			<TileContent>
 				<ImageContent src="sap-icon://activity-individual" />
@@ -114,7 +114,7 @@
 
 		<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop tileLayout" 
 			header="Number of Project Days Evaluated"
-			subheader="{}" 
+			subheader="{DaysEval}" 
 			frameType="OneByOne">
 			<TileContent>
 				<ImageContent src="sap-icon://timesheet" />
@@ -228,6 +228,16 @@
 			</Table>
 		</content>
 		</Panel>
+		<footer>
+			<Toolbar>
+				<ToolbarSpacer/>
+				<Button
+					type="Emphasized"
+					text="Export"
+					press="onExport"
+				/>
+			</Toolbar>
+		</footer>
     </Page>
 
 </mvc:View>
