--- a/webapp/view/ForgotPass.view.xml
+++ b/webapp/view/ForgotPass.view.xml
@@ -1,11 +1,13 @@
 <mvc:View
 	controllerName="sap.ui.demo.walkthrough.controller.ForgotPass"
 	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc">
+	xmlns:mvc="sap.ui.core.mvc"
+>
 	<Page
 		title="{i18n>ForgotPassword}"
 		showNavButton="true"
-		navButtonPress=".onNavBack">
+		navButtonPress=".onNavBack"
+	>
 		<Panel class="sapUiResponsiveMargin">
 			<content>
 				<Input
