--- a/webapp/view/Main.view.xml
+++ b/webapp/view/Main.view.xml
@@ -1,43 +1,41 @@
 <mvc:View
-
 	controllerName="sap.ui.demo.walkthrough.controller.Main"
 	xmlns="sap.m"
-	xmlns:mvc="sap.ui.core.mvc">
-	
-		<Page title="User">
-
- 	<FlexBox alignItems="Center" justifyContent="Center">
-	  	<Panel>
-			 <content>
- 
-            <Button
-            	text="{i18n>ViewProfile}"
-           		class="myCustomButton"
-				press = ".onProfile"
-            	width="60%"/>
-		
-			<Button
-            	text="PEG"
-           		class="myCustomButton"
-				press=".onPEG"
-            	width="60%"/>
-			
-			<Button
-            	text="Feedback"
-           		class="myCustomButton"
-				press=".onFeedback"
-            	width="60%"/>
-	   
-			<Button
-            	text="{i18n>LogOut}"
-				press=".onLogOut"
-           		class="myCustomButton"
-            	width="60%"/>
-				
-       		</content>
-	  	 </Panel>
-	   </FlexBox>
-	  
-    </Page>
-
+	xmlns:mvc="sap.ui.core.mvc"
+>
+	<Page title="User">
+		<FlexBox
+			alignItems="Center"
+			justifyContent="Center"
+		>
+			<Panel>
+				<content>
+					<Button
+						text="{i18n>ViewProfile}"
+						class="myCustomButton"
+						press=".onProfile"
+						width="60%"
+					/>
+					<Button
+						text="PEG"
+						class="myCustomButton"
+						press=".onPEG"
+						width="60%"
+					/>
+					<Button
+						text="Feedback"
+						class="myCustomButton"
+						press=".onFeedback"
+						width="60%"
+					/>
+					<Button
+						text="{i18n>LogOut}"
+						press=".onLogOut"
+						class="myCustomButton"
+						width="60%"
+					/>
+				</content>
+			</Panel>
+		</FlexBox>
+	</Page>
 </mvc:View>
