--- a/webapp/view/ManagerFeedback.view.xml
+++ b/webapp/view/ManagerFeedback.view.xml
@@ -202,7 +202,7 @@
 								<Text text="{
 									path: 'Grade',
 									formatter: '.formatter.gradeDescription'
-									}"/>
+								}"/>
 								<Input
 									id="recommendationInput"
 									value="{Recommendation}"
@@ -223,9 +223,10 @@
 						class="myCustomButton"
 						icon="sap-icon://accept"
 					/>
-					<CheckBox 
+					<CheckBox
 						id="completedCheckBox"
-						text="is Completed?"/>
+						text="is Completed?"
+					/>
 				</contentLeft>
 				<contentRight>
 					<Button
