--- a/webapp/view/Overview.view.xml
+++ b/webapp/view/Overview.view.xml
@@ -1,12 +1,11 @@
 <mvc:View
-		controllerName="sap.ui.demo.walkthrough.controller.App"
-		xmlns="sap.m"
-		xmlns:mvc="sap.ui.core.mvc">
+	controllerName="sap.ui.demo.walkthrough.controller.App"
+	xmlns="sap.m"
+	xmlns:mvc="sap.ui.core.mvc"
+>
 	<Page>
-	
 		<content>
 			<mvc:XMLView viewName="sap.ui.demo.walkthrough.view.LogReg"/>
-			
 		</content>
 	</Page>
 </mvc:View>
